[project]
name = "multi-pov-ir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.7.0",
    "exifread>=3.5.1",
    "folium>=0.20.0",
    "hdbscan>=0.8.44",
    "matplotlib>=3.11.0",
    "nbformat>=4.2.0",
    "pillow>=12.2.0",
    "plotly-express>=0.4.1",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pyproj>=3.7.2",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "staticmap3>=0.2.0",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
