[project]
name = "multi-pov-ir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.7.0",
    "exifread>=3.5.1",
    "faiss-cpu>=1.14.3",
    "folium>=0.20.0",
    "gliner>=0.2.24",
    "hdbscan>=0.8.44",
    "matplotlib>=3.11.0",
    "nbformat>=4.2.0",
    "pillow>=12.2.0",
    "plotly-express>=0.4.1",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pyproj>=3.7.2",
    "qdrant-client>=1.18.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "scikit-learn-extra>=0.3.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "shapely>=2.1.2",
    "staticmap3>=0.2.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "wordcloud>=1.9.6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
